changes in right section of resume

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./styles.css" />
     <title>resume</title>
 </head>
 
@@ -25,24 +25,24 @@
                     <div class="contact-item">
                         <div class="social-media">
                             <li class="icon">
-                                <a href="https://github.com/MrManishThakur"><img src="./icons/github-icon.png"
-                                        alt="github-icon" /></a>
+                                <a href="https://github.com/MrManishThakur" target="_blank"><img
+                                        src="./icons/github-icon.png" alt="github-icon" /></a>
                             </li>
                             <li class="icon">
-                                <a href="https://www.linkedin.com/in/me101/"><img src="./icons/linkedin-icon.png"
-                                        alt="linkedin-icon" /></a>
+                                <a href="https://www.linkedin.com/in/me101/" target="_blank"><img
+                                        src="./icons/linkedin-icon.png" alt="linkedin-icon" /></a>
                             </li>
                             <li class="icon">
-                                <a href="https://twitter.com/MrManishThakur"><img src="./icons/twitter-icon.png"
-                                        alt="twitter-icon" /></a>
+                                <a href="https://twitter.com/MrManishThakur" target="_blank"><img
+                                        src="./icons/twitter-icon.png" alt="twitter-icon" /></a>
                             </li>
                             <li class="icon">
-                                <a href="https://www.instagram.com/iam.manish.thakur/"><img src="./icons/instagram-icon.png"
-                                        alt="instagram-icon" /></a>
+                                <a href="https://www.instagram.com/iam.manish.thakur/" target="_blank"><img
+                                        src="./icons/instagram-icon.png" alt="instagram-icon" /></a>
                             </li>
                             <li class="icon">
-                                <a href="https://www.facebook.com/iammanishkumarthakur/"><img src="./icons/facebook-icon.png"
-                                        alt="facebook-icon" /></a>
+                                <a href="https://www.facebook.com/iammanishkumarthakur/" target="_blank"><img
+                                        src="./icons/facebook-icon.png" alt="facebook-icon" /></a>
                             </li>
                         </div>
                         <div class="personal-details">
@@ -69,7 +69,7 @@
                         <div class="skills-content">
                             <div class="skill-item">
                                 <div class="skill-name">
-                                    <h3>JAVA</h3>
+                                    <h3>Java</h3>
                                 </div>
                                 <div class="skill-progress">
                                     <div class="progress-bar" style="width: 85%"></div>
@@ -77,10 +77,10 @@
                             </div>
                             <div class="skill-item">
                                 <div class="skill-name">
-                                    <h3>C</h3>
+                                    <h3>Data Structures & Algorithms</h3>
                                 </div>
                                 <div class="skill-progress">
-                                    <div class="progress-bar" style="width: 70%"></div>
+                                    <div class="progress-bar" style="width: 75%"></div>
                                 </div>
                             </div>
                             <div class="skill-item">
@@ -88,7 +88,7 @@
                                     <h3>HTML</h3>
                                 </div>
                                 <div class="skill-progress">
-                                    <div class="progress-bar" style="width: 95%"></div>
+                                    <div class="progress-bar" style="width: 85%"></div>
                                 </div>
                             </div>
                             <div class="skill-item">
@@ -96,23 +96,23 @@
                                     <h3>CSS</h3>
                                 </div>
                                 <div class="skill-progress">
-                                    <div class="progress-bar" style="width: 60%"></div>
+                                    <div class="progress-bar" style="width: 70%"></div>
                                 </div>
                             </div>
                             <div class="skill-item">
                                 <div class="skill-name">
-                                    <h3>JAVASCRIPT</h3>
+                                    <h3>JavaScript</h3>
                                 </div>
                                 <div class="skill-progress">
-                                    <div class="progress-bar" style="width: 50%"></div>
+                                    <div class="progress-bar" style="width: 90%"></div>
                                 </div>
                             </div>
                             <div class="skill-item">
                                 <div class="skill-name">
-                                    <h3>SQL</h3>
+                                    <h3>React</h3>
                                 </div>
                                 <div class="skill-progress">
-                                    <div class="progress-bar" style="width: 75%"></div>
+                                    <div class="progress-bar" style="width: 80%"></div>
                                 </div>
                             </div>
                         </div>
@@ -124,74 +124,97 @@
             <div class="right-main-content">
                 <section class="about-section">
                     <h1 class="right-title">About Me</h1>
+                    <hr />
                     <p class="right-content">
-                        I have just over a year of experience as a junior software engineer with First Technology.
-                        In my short time there, I've already contributed to over a dozen projects and assisted with
-                        managing one project for one of the firm's long-time clients.
-
-                        “Prior to this role, I completed a two-year internship with Mobile First, where I honed my
-                        mobile app development skills. Ideally, I would like to continue to specialize in mobile
-                        software engineering, an area where I know your firm excels.”
+                        A motivated individual with in-depth knowledge of languages and development tools, seeking a
+                        position in a growth-oriented company where I can use my skills to the advantage of the company
+                        while having the scope to develop my own skills.
                     </p>
                 </section>
                 <br />
                 <section class="education-section">
                     <h1 class="right-title">Education</h1>
-                    <div class="right-content">
-                        <h4>Bachelor of Science in Information Technology</h4>
-                        <div class="education-details">
-                            <span class="institution-details">
-                                I have completed my B.Sc in Information Technology from lovely professional university
-                            </span>
-                            <span class="institution">
-                                <div>LPU</div>
-                                <div>2017-2020</div>
-                            </span>
-                        </div>
-                    </div>
-                    <div class="right-content">
-                        <h4>Intermediate</h4>
-                        <div class="education-details">
-                            <span class="institution-details">I have completed my 12th from BSEB board in 2016 with mathematics, physics and chemistry as a primary subject.</span>
-                            <span class="institution">
-                                <div>H. S. V. College</div>
-                                <div>2014-2016</div>
-                            </span>
-                        </div>
-                    </div>
+                    <hr />
+                    <table>
+                        <tr>
+                            <th>Year</th>
+                            <th>Degree/Examination</th>
+                            <th>Institution/Board</th>
+                            <th>CGPA/Percentage</th>
+                        </tr>
+                        <tr>
+                            <td>2020</td>
+                            <td>B.Sc.(IT)</td>
+                            <td>Lovely Professional University</td>
+                            <td class="grades">7.57</td>
+                        </tr>
+                        <tr>
+                            <td>2016</td>
+                            <td>Intermediate (Class XII)</td>
+                            <td>H. S. V. College, BSEB</td>
+                            <td class="grades">63.4%</td>
+                        </tr>
+                        <tr>
+                            <td>2014</td>
+                            <td>Matriculation (Class X)</td>
+                            <td>Nand High School, BSEB</td>
+                            <td class="grades">58.6%</td>
+                        </tr>
+                    </table>
                 </section>
                 <br />
                 <section class="project-section">
-                    <h1 class="right-title">Projects</h1>
+                    <h1 class="right-title">Internship and Certifications
+                    </h1>
+                    <hr />
                     <div class="right-content">
-                        <h4>Photography website</h4>
-                        <div class="project-details">
-                            <span class="project-info">I have created simple photography website using HTML and CSS.</span>
-                            <span class="project-span">
-                                <div>HTML and CSS</div>
-                                <div>2022</div>
-                            </span>
-                        </div>
+                        <span><b>Newton School | </b></span><span>Newton School Coding Bootcamp Internship</span>
+                        <ul>
+                            <li>Internship in Full Stack Web Development</li>
+                            <li>Participated in various coding contest organized by platform.</li>
+                            <li>Problem solving: Data Structures and Algorithms.</li>
+                            <li>Technical Stack learnt: HTML, CSS, JavaScript, React, Data Structure and Core Java.</li>
+                        </ul>
                     </div>
+                </section>
+                <section class="project-section">
+                    <h1 class="right-title">Projects</h1>
+                    <hr />
                     <div class="right-content">
-                        <h4>Responsive resume</h4>
-                        <div class="project-details">
-                            <span class="project-info">I have created resume using HTML and CSS.</span>
-                            <span class="project-span">
-                                <div>HTML and CSS</div>
-                                <div>2022</div>
-                            </span>
+                        <div>
+                            <span><b>Food Delivery App | </b></span><span>Self</span>
+                            <ul>
+                                <li><b>Description: </b> This project is designed and build to demonstrate the react
+                                    concepts, and in this
+                                    project user can add their choice of food and sweets to the cart and later I will
+                                    add more functionality.</li>
+                                <li><b>Features:</b> It is responsive and have good UI design.</li>
+                                <li><b>Role:</b> Developer | Tech Stack: React</li>
+
+                            </ul>
+                        </div>
+                        <div class="login-auth">
+                            <span><b>Login Authentication | </b></span><span>Newton School</span>
+                            <ul>
+                                <li><b>Description:</b> This project is used to authenticate and validate user data to
+                                    ensure that entered data is valid.</li>
+                                <li><b>Features:</b> It contains two page login and signup, signup page is used to
+                                    register user data and login is used to fetch details corresponding to entered data
+                                    by users.</li>
+                                <li><b>Role:</b> Developer | Tech Stack: HTML, CSS and JavaScript</li>
+                            </ul>
                         </div>
                     </div>
                 </section>
                 <section class="hobbies-section">
-                    <h1 class="right-title">Hobbies</h1>
-                    <div>
+                    <h1 class="right-title">Co-Curricular Activities</h1>
+                    <hr />
+                    <div class="right-content">
                         <ul>
-                            <li>Playing cricket</li>
-                            <li>Listening to music</li>
-                            <li>Reading articles</li>
-                            <li>Learning code</li>
+                            <li>Attended a 106th ISC (Indian Science Congees) which was held in Lovely Professional
+                                University on 03rd to 07th January 2019.</li>
+                            <li>Attended workshop on Biz Hub which was organized at Lovely Professional University in
+                                September 2018.</li>
                         </ul>
                     </div>
                 </section>
