--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                 </div>
                 <div class="contact-info">
                     <div class="contact-item">
-                        <div class="social-media">
+                        <div class="social-media" id="social-media-link"
+                            style="display: flex; flex-direction: row; justify-content: space-around;">
                             <li class="icon">
                                 <a href="https://github.com/MrManishThakur" target="_blank"><img
                                         src="./icons/github-icon.png" alt="github-icon" /></a>
@@ -31,18 +32,6 @@
                             <li class="icon">
                                 <a href="https://www.linkedin.com/in/me101/" target="_blank"><img
                                         src="./icons/linkedin-icon.png" alt="linkedin-icon" /></a>
-                            </li>
-                            <li class="icon">
-                                <a href="https://twitter.com/MrManishThakur" target="_blank"><img
-                                        src="./icons/twitter-icon.png" alt="twitter-icon" /></a>
-                            </li>
-                            <li class="icon">
-                                <a href="https://www.instagram.com/iam.manish.thakur/" target="_blank"><img
-                                        src="./icons/instagram-icon.png" alt="instagram-icon" /></a>
-                            </li>
-                            <li class="icon">
-                                <a href="https://www.facebook.com/iammanishkumarthakur/" target="_blank"><img
-                                        src="./icons/facebook-icon.png" alt="facebook-icon" /></a>
                             </li>
                         </div>
                         <div class="personal-details">
@@ -182,26 +171,26 @@
                     <hr />
                     <div class="right-content">
                         <div>
-                            <span><b>Food Delivery App | </b></span><span>Self</span>
+                            <span><b>Food Delivery App | </b></span><span>Self</span><span> <a
+                                    href="https://food-delivery-app-ns.netlify.app/" target="_blank">(link)</a></span>
                             <ul>
                                 <li><b>Description: </b> This project is designed and build to demonstrate the react
-                                    concepts, and in this
-                                    project user can add their choice of food and sweets to the cart and later I will
-                                    add more functionality.</li>
-                                <li><b>Features:</b> It is responsive and have good UI design.</li>
-                                <li><b>Role:</b> Developer | Tech Stack: React</li>
+                                    concepts, and in this project user can add their choice of food and sweets to the
+                                    cart.</li>
+                                <li><b>Features:</b> It has responsive UI design and add to cart functionality.</li>
+                                <li><b>Tech Stack:</b> CSS Module, React and Netlify</li>
 
                             </ul>
                         </div>
                         <div class="login-auth">
-                            <span><b>Login Authentication | </b></span><span>Newton School</span>
+                            <span><b>Login Authentication | </b></span><span>Newton School</span><span> <a
+                                    href="https://login-auth-ns.netlify.app/" target="_blank">(link)</a></span>
                             <ul>
-                                <li><b>Description:</b> This project is used to authenticate and validate user data to
-                                    ensure that entered data is valid.</li>
-                                <li><b>Features:</b> It contains two page login and signup, signup page is used to
-                                    register user data and login is used to fetch details corresponding to entered data
-                                    by users.</li>
-                                <li><b>Role:</b> Developer | Tech Stack: HTML, CSS and JavaScript</li>
+                                <li><b>Description:</b> This project authenticates and validates user data based on the
+                                    entered data.</li>
+                                <li><b>Features:</b> It contains two page login and signup where signup page is used to
+                                    register user and login page is used to fetch details of user.</li>
+                                <li><b>Tech Stack:</b> HTML, CSS and JavaScript</li>
                             </ul>
                         </div>
                     </div>
@@ -211,8 +200,9 @@
                     <hr />
                     <div class="right-content">
                         <ul>
-                            <li>Attended a 106th ISC (Indian Science Congees) which was held in Lovely Professional
-                                University on 03rd to 07th January 2019.</li>
+                            <li>Volunteer in 106<sup>th</sup> ISC(Indian Science Congress) which was held
+                                in Lovely Professional University on 03<sup>rd</sup> to 07<sup>th</sup> January 2019.
+                            </li>
                             <li>Attended workshop on Biz Hub which was organized at Lovely Professional University in
                                 September 2018.</li>
                         </ul>
