--- a/index.html
+++ b/index.html
@@ -104,6 +104,38 @@
                                     <div class="progress-bar" style="width: 80%"></div>
                                 </div>
                             </div>
+                            <div class="skill-item">
+                                <div class="skill-name">
+                                    <h3>Node</h3>
+                                </div>
+                                <div class="skill-progress">
+                                    <div class="progress-bar" style="width: 60%"></div>
+                                </div>
+                            </div>
+                            <div class="skill-item">
+                                <div class="skill-name">
+                                    <h3>Express</h3>
+                                </div>
+                                <div class="skill-progress">
+                                    <div class="progress-bar" style="width: 60%"></div>
+                                </div>
+                            </div>
+                            <div class="skill-item">
+                                <div class="skill-name">
+                                    <h3>MongoDb</h3>
+                                </div>
+                                <div class="skill-progress">
+                                    <div class="progress-bar" style="width: 40%"></div>
+                                </div>
+                            </div>
+                            <div class="skill-item">
+                                <div class="skill-name">
+                                    <h3>SQL</h3>
+                                </div>
+                                <div class="skill-progress">
+                                    <div class="progress-bar" style="width: 80%"></div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -162,7 +194,8 @@
                             <li>Internship in Full Stack Web Development</li>
                             <li>Participated in various coding contest organized by platform.</li>
                             <li>Problem solving: Data Structures and Algorithms.</li>
-                            <li>Technical Stack learnt: HTML, CSS, JavaScript, React, Data Structure and Core Java.</li>
+                            <li>Technical Stack learnt: HTML, CSS, JavaScript, React, Node, Express, MongoDb, SQL, Data
+                                Structure with Java.</li>
                         </ul>
                     </div>
                 </section>
@@ -170,27 +203,36 @@
                     <h1 class="right-title">Projects</h1>
                     <hr />
                     <div class="right-content">
-                        <div>
-                            <span><b>Food Delivery App | </b></span><span>Self</span><span> <a
-                                    href="https://food-delivery-app-ns.netlify.app/" target="_blank">(link)</a></span>
+                        <div class="project">
+                            <span><b>Tic Tac Toe | </b></span><span>Self</span><span> <a
+                                    href="https://tic-tac-toe-ns.netlify.app/" target="_blank">(link)</a></span>
                             <ul>
-                                <li><b>Description: </b> This project is designed and build to demonstrate the react
-                                    concepts, and in this project user can add their choice of food and sweets to the
-                                    cart.</li>
-                                <li><b>Features:</b> It has responsive UI design and add to cart functionality.</li>
-                                <li><b>Tech Stack:</b> CSS Module, React and Netlify</li>
+                                <li> A two player game to multi-play with friends locally.</li>
+                                <li>Features: Reload Game, Draw state, Win state</li>
+                                <li>Tech Stack: React</li>
 
                             </ul>
                         </div>
-                        <div class="login-auth">
+                        <div class="project">
+                            <span><b>Food Delivery App | </b></span><span>Newton School</span><span> <a
+                                    href="https://food-delivery-app-ns.netlify.app/" target="_blank">(link)</a></span>
+                            <ul>
+                                <li> This app can be used to deliver on-demand customer-choice food
+                                    for a restaurant to make an online business.</li>
+                                <li>Features: It has responsive UI, add to cart functionality.</li>
+                                <li>Tech Stack: React</li>
+
+                            </ul>
+                        </div>
+                        <div class="project">
                             <span><b>Login Authentication | </b></span><span>Newton School</span><span> <a
                                     href="https://login-auth-ns.netlify.app/" target="_blank">(link)</a></span>
                             <ul>
-                                <li><b>Description:</b> This project authenticates and validates user data based on the
+                                <li>This project authenticates and validates user data based on the
                                     entered data.</li>
-                                <li><b>Features:</b> It contains two page login and signup where signup page is used to
+                                <li>Features: It contains two page login and signup where signup page is used to
                                     register user and login page is used to fetch details of user.</li>
-                                <li><b>Tech Stack:</b> HTML, CSS and JavaScript</li>
+                                <li>Tech Stack: HTML, CSS and JavaScript</li>
                             </ul>
                         </div>
                     </div>
