--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
-    <title>resume</title>
+    <title>Manish Resume</title>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
                         <img class="profile-image" src="./icons/profile-image.jpg" alt="Profile Image" />
                     </div>
                     <h2 class="name">Manish Kumar Thakur</h2>
-                    <h4 class="designation">SDE-1</h4>
+                    <h4 class="designation">Fresher</h4>
                     <hr />
                     <h4 class="description">Full Stack Web Developer</h4>
                 </div>
@@ -185,7 +185,7 @@
                 </section>
                 <br />
                 <section class="project-section">
-                    <h1 class="right-title">Internship and Certifications
+                    <h1 class="right-title">Internship
                     </h1>
                     <hr />
                     <div class="right-content">
@@ -204,22 +204,20 @@
                     <hr />
                     <div class="right-content">
                         <div class="project">
+                            <span><b>Todo App | </b></span><span>Self</span><span> <a
+                                    href="https://todo-app-d2j1.onrender.com/" target="_blank">(link)</a></span>
+                            <ul>
+                                <li> Created web application to store our daily life work to do.</li>
+                                <li>Features: Add list to database, show data with filter.</li>
+                                <li>Tech Stack:  React, Redux Node, Express Mongo Db.</li>
+                            </ul>
+                        </div>
+                        <div class="project">
                             <span><b>Tic Tac Toe | </b></span><span>Self</span><span> <a
                                     href="https://tic-tac-toe-ns.netlify.app/" target="_blank">(link)</a></span>
                             <ul>
                                 <li> A two player game to multi-play with friends locally.</li>
                                 <li>Features: Reload Game, Draw state, Win state</li>
-                                <li>Tech Stack: React</li>
-
-                            </ul>
-                        </div>
-                        <div class="project">
-                            <span><b>Food Delivery App | </b></span><span>Newton School</span><span> <a
-                                    href="https://food-delivery-app-ns.netlify.app/" target="_blank">(link)</a></span>
-                            <ul>
-                                <li> This app can be used to deliver on-demand customer-choice food
-                                    for a restaurant to make an online business.</li>
-                                <li>Features: It has responsive UI, add to cart functionality.</li>
                                 <li>Tech Stack: React</li>
 
                             </ul>
@@ -237,7 +235,28 @@
                         </div>
                     </div>
                 </section>
+                <section class="project-section">
+                    <h1 class="right-title">Certifications</h1>
+                    <hr />
+                    <div class="right-content">
+                        <ul>
+                            <li>Python</li>
+                            <li>React</li>
+                        </ul>
+                    </div>
+                </section>
                 <section class="hobbies-section">
+                    <h1 class="right-title">Hobbies</h1>
+                    <hr />
+                    <div class="right-content">
+                        <ul>
+                            <li>Playing Cricket</li>
+                            <li>Listening to Music</li>
+                            <li>Reading Articles</li>
+                        </ul>
+                    </div>
+                </section>
+                <section class="activities-section">
                     <h1 class="right-title">Co-Curricular Activities</h1>
                     <hr />
                     <div class="right-content">
